# embedded-cli-rs-pub-visibility-demo

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: lib.rs
